# PurnaFish

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: bitboard.cpp  bitboard.hpp  datagen.cpp  datagen.hpp  evaluate.cpp  evaluate.hpp  main.cpp  misc.cpp  misc.hpp  movegen.cpp  movegen.hpp  movepick.cpp  movepick.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  search.cpp  search.hpp  see.cpp  see.hpp  thread.cpp  thread.hpp  timeman.cpp  timeman.hpp  tt.cpp  tt.hpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
src/cuda/: cuda_common.cuh  nnue_cuda.cu  nnue_cuda.cuh
src/eval/: hce.cpp  hce.hpp
src/nnue/: nnue_accumulator.hpp  nnue_common.hpp  nnue_eval.cpp  nnue_eval.hpp  nnue_feature_transformer.hpp
src/syzygy/: syzygy.cpp  syzygy.hpp  tbconfig.h
